Bug 94615 - Evince does not print hyphens in LaTeX documents
Summary: Evince does not print hyphens in LaTeX documents
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
: 86535 105081 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-18 15:06 UTC by undisclosed
Modified: 2018-07-06 15:49 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description undisclosed 2016-03-18 15:06:34 UTC
When I print PDF documents generated by pdflatex from Evince, the output often misses hyphens, dashes and similar symbols, which is quite annoying because it makes proofreading those printouts impossible.

Printing the same document from Okular does not result in missing hyphens.

The big can be reproduced without printing using pdftocairo:

> echo "\documentclass{article}\usepackage[T1]{fontenc}\begin{document}a-b---\end{document}" | pdflatex 
> pdftocairo -pdf article.pdf out.pdf

If you open article.pdf (in Evince or in Okular), you will see a hyphen and a long dash. If you open out.pdf instead, the dash is missing.

This bug has been observed already in other places:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=810617
http://superuser.com/questions/969987/how-to-prevent-missing-hyphens-when-printing-pdf-from-evince

I am running an up-to-date Ubuntu 15.10 on AMD64 with 
libpoppler52:amd64 0.33.0-0ubuntu3 and
evince 3.16.1-0ubuntu1.
Comment 1 Jason Crain 2016-03-29 06:10:13 UTC
I'm reassigning this to cairo.  The test.pdf document from https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=810617 looks similar to bug 89082 for fonts using glyph 0, but for type3/user fonts instead of truetype fonts.  cairo's pdf and ps output are missing the hypen.
Comment 2 undisclosed 2016-03-29 11:49:25 UTC
The bug is still present with Ubuntu 16.04 Beta 2. However, I cannot reproduce it using Arch though both use the same version of libcairo2 (1.14.6-1) and pdftocairo (0.41.0).

Earlier this year, a colleague observed this bug when printing from Arch, too. So, it seems as some recent changes fixed it there; although I don't know what exactly.

Let me know if you need further information.
Comment 4 Adrian Johnson 2016-07-16 11:14:11 UTC
*** Bug 86535 has been marked as a duplicate of this bug. ***
Comment 5 chrysn 2017-09-12 18:37:58 UTC
Could this patch be backported to the 1.14 branch? I tried the naive approach (just applying the single patch), but the surface->target->is_vector member is absent there.
Comment 6 Roland Baudin 2017-11-23 10:12:57 UTC
I've provided a backport patch for Ubuntu 16.04 xenial.

It's here : https://bugs.launchpad.net/ubuntu/+source/cairo/+bug/1734092
Comment 7 Alex Korobkin 2018-07-06 15:49:15 UTC
*** Bug 105081 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.